@@ -104,7 +104,7 @@
       <type>int</type>
       <default>3000</default>
       <locale name="C">
-        <short>Time in miliseconds between updates of the process view</short>
+        <short>Time in milliseconds between updates of the process view</short>
         <long></long>
       </locale>
       </schema>
@@ -116,7 +116,7 @@
       <type>int</type>
       <default>1000</default>
       <locale name="C">
-        <short>Time in miliseconds between updates of the graphs</short>
+        <short>Time in milliseconds between updates of the graphs</short>
         <long></long>
       </locale>
       </schema>
@@ -128,7 +128,7 @@
       <type>int</type>
       <default>5000</default>
       <locale name="C">
-        <short>Time in miliseconds between updates of the devices list</short>
+        <short>Time in milliseconds between updates of the devices list</short>
         <long></long>
       </locale>
       </schema>
@@ -152,7 +152,7 @@
       <type>int</type>
       <default>0</default>
       <locale name="C">
-        <short>Saves the current viewed tab</short>
+        <short>Saves the currently viewed tab</short>
         <long></long>
       </locale>
       </schema>
@@ -164,7 +164,7 @@
       <type>int</type>
       <default>300</default>
       <locale name="C">
-        <short>Saves the pane position for the sytem monitor tab</short>
+        <short>Saves the pane position for the system monitor tab</short>
         <long></long>
       </locale>
       </schema>
