@@ -1,5 +1,9 @@
 2005-01-09  Benoît Dejean  <TazForEver@dlfp.org>
 
+	* src/gnome-system-monitor.schemas.in: Fixed. Closes #163391.
+
+2005-01-09  Benoît Dejean  <TazForEver@dlfp.org>
+
 	* src/interface.c: Fixed typo. Closes #163393.
 	Closes #163394.
 
